--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -26,7 +26,7 @@ Upper Knight and Bute Inlet CUs are both associated with long fjords that run fr
 
 Chum from the Upper Knight and Bute Inlet CUs are exposed to different threats to habitat, survival and productivity than the other five CUs in both the fresh water and the early marine phase. While these two CUs have, on average, lower impacts from forest harvest, impervious area, and roads, they have larger impacts from forest defoliation and pests [@pacificsalmonfoundationPacificSalmonExplorer2021]. They may also have different levels of risk from disturbances such as glacier melt, avalanches, debris flows, and floods because they have large melting glaciers associated with lakes, steep slopes, and unstable terrain. In the Bute Inlet CU, the glacial lake outburst flood that caused a debris flow in the Southgate River in November 2020 is one example of such an event. These events are capable of killing an entire brood year of eggs/alevins and reshaping habitat with impacts on spawning habitat and stream ecosystems for many years. They can also change water quality in near shore marine habitats. These catastrophic events may be less likely in watersheds with gentler topography and that lack glaciers and glacial lakes. 
 
-Environmental drivers, biological characteristics, and population capacity for Upper Knight and Bute Inlet CUs also differ from the other seven CUs. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. The two largest watersheds in these CUs (Homathko and Klinaklini) fall within their own Freshwater Adaptive Zone, which indicates unique freshwater habitat conditions (Figure 76 and Table 52 in @holtbyConservationUnitsPacific2007). These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Competition with other salmon in the ocean and ocean conditions affect chum salmon in this SMU [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021], although declines in Pink salmon stocks in this general area may suggest that these factors are not affecting these CUs only. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and years with very low productivity. These CUs also have lower habitat capacity, with fewer streams with fall timed Chum spawners than the other CUs (Table \@ref(tab:CU-summary)). Based on these differences, <!--CH 1 Feb. suggest remoing "the burden of proof is not met,"-->and we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be inferred for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. 
+Environmental drivers, biological characteristics, and population capacity for Upper Knight and Bute Inlet CUs also differ from the other seven CUs. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. The two largest watersheds in these CUs (Homathko and Klinaklini) fall within their own Freshwater Adaptive Zone, which indicates unique freshwater habitat conditions (Figure 76 and Table 52 in @holtbyConservationUnitsPacific2007). These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Competition with other salmon in the ocean and ocean conditions affect chum salmon in this SMU [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021], although declines in Pink salmon stocks in this general area may suggest that these factors are not affecting these CUs only. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and years with very low productivity. These CUs also have lower habitat capacity, with fewer streams with fall timed Chum spawners than the other CUs (Table \@ref(tab:CU-summary)). Based on these differences, we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be inferred for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. 
 
 
 ```{r CU-summary, echo=FALSE}
@@ -227,7 +227,6 @@ Download diagnostic info for checking
 
 Table: (\#tab:logistic-diag-chum) Model diagnostic statistics from logistic regression LRP using percentile benchmarks. A description of diagnostic tests is provided in Section 2. Hit ratios are shown for p=0.5.  
 
-<!--CH 1 Feb. In my knit version the text here runs off the page. Not sure how to fix-->
 
 Several factors led to these poor model fits. The Inside South Coast Chum SMU is made up of seven CUs that vary in their escapement abundance. In many years, escapement in Georgia Strait and Howe Sound-Burrard Inlet is greater than in other CUs by two orders of magnitude (Figure \@ref(fig:chum-spawner-distribution)). In addition, the correlation in escapement among these seven CUs is low (Figure \@ref(fig:chum-spawner-corr)). These characteristics mean that the aggregate abundance may be high due to one or more CUs with high escapements, while one more smaller CUs are below their benchmark. High aggregate escapements do not mean that all CUs are above their benchmark. The low pairwise correlations in CU escapements are likely due to the SMU covering a large area, with varying numbers of populations affected by both local and regional factors, as described in Sectoin \@ref(chum-context).
 
